--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     HI....! Portfolio is coming
+    <img src="https://media1.giphy.com/media/UYpelo7WbjZQg0dDQY/giphy.gif" alt="" >
     <script src="./js/jquery-3.6.3.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
