--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=DM Sans:wght@400;500;700&display=swap"
+    />
 </head>
 <body>
-    HI....! Portfolio is coming
-    <img src="https://media1.giphy.com/media/UYpelo7WbjZQg0dDQY/giphy.gif" alt="" >
+    <section class="screen middle">
+        <header class="pr middle">
+            <div class="menu-background">
+                <div class="square-top"></div>
+                <img class="logo" src="./images/logo.png" alt="">
+                <ul class="navbar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About us</a></li>
+                    <li><a href="product.html">Product</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                </ul>
+            </div>
+            <img src="./images/logo-banner.png" alt="" class="logo-baner">
+            <h1 class="slogan">Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!</h1>
+            <p class="croll">Scroll Down</p>
+        </header>
+    </section>
+    
     <script src="./js/jquery-3.6.3.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
