--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=DM Sans:wght@400;500;700&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM Sans:wght@400;500;700&display=swap" />
 </head>
+
 <body>
     <section class="screen middle">
         <header class="pr middle">
@@ -28,6 +27,9 @@
             <img src="./images/logo-banner.png" alt="" class="logo-baner">
             <h1 class="slogan">Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!</h1>
             <p class="croll">Scroll Down</p>
+            <img class="slider" src="./images/Product image 1.png" alt="">
+            <img class="slider" src="./images/Product image 2.png" alt="">
+            <img class="slider" src="./images/Product image 3.png" alt="">
         </header>
     </section>
     
@@ -35,4 +37,5 @@
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
