--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    hello 3
-</body>
+  </head>
+  <body>
+    <header>
+      <section class="screen middle">
+        <header class="pr middle">
+          <div class="menu-background">
+            <div class="square-top"></div>
+            <img class="logo" src="./images/logo.png" alt="" />
+            <ul class="navbar">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="product.html">Product</a></li>
+              <li><a href="contact.html">Contact us</a></li>
+            </ul>
+          </div>
+          <img src="./images/logo-banner.png" alt="" class="logo-baner" />
+          <h1 class="slogan">
+            Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!
+          </h1>
+          <p class="croll">Scroll Down</p>
+          <img class="slider" src="./images/Product image 1.png" alt="" />
+          <img class="slider" src="./images/Product image 2.png" alt="" />
+          <img class="slider" src="./images/Product image 3.png" alt="" />
+        </header>
+      </section>
+    </header>
+    <main>
+      <section class="technologies">
+        <div class="container">
+          <div class="d-grid middle">
+            <p>Technology</p>
+            <p>The Technologies we use</p>
+            <div class="yellow col-10 middle">
+              <img src="./images/html5.png" />
+              <img src="./images/css3.png" />
+              <img src="./images/sass.png" />
+              <img src="./images/react.png" />
+              <img src="./images/js.png" />
+            </div>
+            <p>The Technologies we use</p>
+            <div class="yellow col-10 middle">
+              <img src="./images/aws.png" />
+              <img src="./images/nodejs.png" />
+              <img src="./images/be.png" />
+              <img src="./images/pin.png" />
+              <img src="./images/idk.png" />
+              <img src="./images/vue.png" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
