--- a/about.html
+++ b/about.html
@@ -4,47 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/owl.carousel.css" />
+    <link rel="stylesheet" href="./css/owl.theme.default.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=DM Sans:wght@400;500;700&display=swap"
+    />
   </head>
   <body>
-    <header>
-      <section class="screen middle">
-        <header class="pr middle">
-          <div class="menu-background">
-            <div class="square-top"></div>
-            <img class="logo" src="./images/logo.png" alt="" />
-            <ul class="navbar">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="product.html">Product</a></li>
-              <li><a href="contact.html">Contact us</a></li>
-            </ul>
-          </div>
-          <img src="./images/logo-banner.png" alt="" class="logo-baner" />
-          <h1 class="slogan">
-            Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!
-          </h1>
-          <p class="croll">Scroll Down</p>
-          <img class="slider" src="./images/Product image 1.png" alt="" />
-          <img class="slider" src="./images/Product image 2.png" alt="" />
-          <img class="slider" src="./images/Product image 3.png" alt="" />
-        </header>
-      </section>
-    </header>
     <main>
       <section class="technologies">
-        <div class="container">
-          <div class="d-grid middle">
-            <p>Technology</p>
-            <p>The Technologies we use</p>
-            <div class="yellow col-10 middle">
+        <div class="container middle">
+          <div class="d-grid">
+            <p class="cl-yellow sans fw700 fs48 lh62 middle mt100 bold">
+              Technology Use
+            </p>
+            <p class="white sans fw700 fs36 lh47 mt100">
+              The Technologies we use
+            </p>
+            <div class="yellow col-12 d-flex mt30 h200">
               <img src="./images/html5.png" />
               <img src="./images/css3.png" />
               <img src="./images/sass.png" />
               <img src="./images/react.png" />
               <img src="./images/js.png" />
             </div>
-            <p>The Technologies we use</p>
-            <div class="yellow col-10 middle">
+            <p class="white sans fw700 fs36 lh47 mt100">
+              Other Assistive Technologies we use
+            </p>
+            <div class="yellow col-12 d-flex mt30 h200 mb100">
               <img src="./images/aws.png" />
               <img src="./images/nodejs.png" />
               <img src="./images/be.png" />
@@ -55,6 +44,126 @@
           </div>
         </div>
       </section>
+
+      <section class="whatwedo">
+        <div class="container middle">
+          <div class="d-grid">
+            <p class="cl-yellow sans fw700 fs48 lh62 middle mt100 bold">
+              What we do
+            </p>
+            <div class="owl-member owl-carousel middle">
+              <div class="d-flex space-around mt100 mb100">
+                <div class="col-3">
+                  <img src="./images/nhuan.png" />
+                </div>
+                <div class="col-4 decor d-grid">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <button class="bg-black white border h70 w230">WORK</button>
+                  <button class="bg-black white border h70 w230">RESUME</button>
+                </div>
+                <div class="col-5 decor">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                </div>
+              </div>
+
+              <div class="d-flex space-around mt100 mb100">
+                <div class="col-3">
+                  <img src="./images/nhuan.png" />
+                </div>
+                <div class="col-4 decor d-grid">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <button class="bg-black white border h70 w230">WORK</button>
+                  <button class="bg-black white border h70 w230">RESUME</button>
+                </div>
+                <div class="col-5 decor">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                </div>
+              </div>
+
+              <div class="d-flex space-around mt100 mb100">
+                <div class="col-3">
+                  <img src="./images/nhuan.png" />
+                </div>
+                <div class="col-4 decor d-grid">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <button class="bg-black white border h70 w230">WORK</button>
+                  <button class="bg-black white border h70 w230">RESUME</button>
+                </div>
+                <div class="col-5 decor">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                </div>
+              </div>
+
+              <div class="d-flex space-around mt100 mb100">
+                <div class="col-3">
+                  <img src="./images/nhuan.png" />
+                </div>
+                <div class="col-4 decor d-grid">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <button class="bg-black white border h70 w230">WORK</button>
+                  <button class="bg-black white border h70 w230">RESUME</button>
+                </div>
+                <div class="col-5 decor">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                </div>
+              </div>
+
+              <div class="d-flex space-around mt100 mb100">
+                <div class="col-3">
+                  <img src="./images/nhuan.png" />
+                </div>
+                <div class="col-4 decor d-grid">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <button class="bg-black white border h70 w230">WORK</button>
+                  <button class="bg-black white border h70 w230">RESUME</button>
+                </div>
+                <div class="col-5 decor">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                </div>
+              </div>
+
+              <div class="d-flex space-around mt100 mb100">
+                <div class="col-3">
+                  <img src="./images/nhuan.png" />
+                </div>
+                <div class="col-4 decor d-grid">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <button class="bg-black white border h70 w230">WORK</button>
+                  <button class="bg-black white border h70 w230">RESUME</button>
+                </div>
+                <div class="col-5 decor">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                </div>
+              </div>
+
+              <div class="d-flex space-around mt100 mb100">
+                <div class="col-3">
+                  <img src="./images/nhuan.png" />
+                </div>
+                <div class="col-4 decor d-grid">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <button class="bg-black white border h70 w230">WORK</button>
+                  <button class="bg-black white border h70 w230">RESUME</button>
+                </div>
+                <div class="col-5 decor">
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
+  <script src="js/jquery-3.6.3.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/owl.carousel.js"></script>
+  <script src="js/main.js"></script>
 </html>
