--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM Sans:wght@400;500;700&display=swap" />
-</head>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=DM Sans:wght@400;500;700&display=swap"
+    />
+  </head>
 
-<body>
+  <body>
     <section class="screen middle">
-        <header class="pr middle">
-            <div class="menu-background">
-                <div class="square-top"></div>
-                <img class="logo" src="./images/logo.png" alt="">
-                <ul class="navbar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About us</a></li>
-                    <li><a href="product.html">Product</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                </ul>
-            </div>
-            <img src="./images/logo-banner.png" alt="" class="logo-baner">
-            <h1 class="slogan">Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!</h1>
-            <p class="croll">Scroll Down</p>
-            <img class="slider" src="./images/Product image 1.png" alt="">
-            <img class="slider" src="./images/Product image 2.png" alt="">
-            <img class="slider" src="./images/Product image 3.png" alt="">
-        </header>
+      <header class="pr middle">
+        <div class="menu-background">
+          <div class="square-top"></div>
+          <img class="logo" src="./images/logo.png" alt="" />
+          <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="product.html">Product</a></li>
+            <li><a href="contact.html">Contact us</a></li>
+          </ul>
+        </div>
+        <img src="./images/logo-banner.png" alt="" class="logo-baner" />
+        <h1 class="slogan">
+          Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!
+        </h1>
+        <p class="croll">Scroll Down</p>
+        <img class="slider" src="./images/Product image 1.png" alt="" />
+        <img class="slider" src="./images/Product image 2.png" alt="" />
+        <img class="slider" src="./images/Product image 3.png" alt="" />
+      </header>
     </section>
-    
+
     <script src="./js/jquery-3.6.3.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
-</body>
-
+  </body>
 </html>
