--- a/about.html
+++ b/about.html
@@ -69,10 +69,12 @@
 
               <div class="d-flex space-around mt100 mb100">
                 <div class="col-3">
-                  <img src="./images/nhuan.png" />
+                  <img src="./images/thanh.png" />
                 </div>
                 <div class="col-4 decor d-grid">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">
+                    Infomation Technology
+                  </p>
                   <button class="bg-black white border h70 w230">WORK</button>
                   <button class="bg-black white border h70 w230">RESUME</button>
                 </div>
@@ -84,10 +86,12 @@
 
               <div class="d-flex space-around mt100 mb100">
                 <div class="col-3">
-                  <img src="./images/nhuan.png" />
+                  <img src="./images/vu.png" />
                 </div>
                 <div class="col-4 decor d-grid">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">
+                    Infomation Technology
+                  </p>
                   <button class="bg-black white border h70 w230">WORK</button>
                   <button class="bg-black white border h70 w230">RESUME</button>
                 </div>
@@ -99,10 +103,12 @@
 
               <div class="d-flex space-around mt100 mb100">
                 <div class="col-3">
-                  <img src="./images/nhuan.png" />
+                  <img src="./images/thiet.png" />
                 </div>
                 <div class="col-4 decor d-grid">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">
+                    Infomation Technology
+                  </p>
                   <button class="bg-black white border h70 w230">WORK</button>
                   <button class="bg-black white border h70 w230">RESUME</button>
                 </div>
@@ -114,10 +120,12 @@
 
               <div class="d-flex space-around mt100 mb100">
                 <div class="col-3">
-                  <img src="./images/nhuan.png" />
+                  <img src="./images/nam.png" />
                 </div>
                 <div class="col-4 decor d-grid">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">
+                    Infomation Technology
+                  </p>
                   <button class="bg-black white border h70 w230">WORK</button>
                   <button class="bg-black white border h70 w230">RESUME</button>
                 </div>
@@ -129,10 +137,12 @@
 
               <div class="d-flex space-around mt100 mb100">
                 <div class="col-3">
-                  <img src="./images/nhuan.png" />
+                  <img src="./images/thang.png" />
                 </div>
                 <div class="col-4 decor d-grid">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">
+                    Infomation Technology
+                  </p>
                   <button class="bg-black white border h70 w230">WORK</button>
                   <button class="bg-black white border h70 w230">RESUME</button>
                 </div>
@@ -144,10 +154,10 @@
 
               <div class="d-flex space-around mt100 mb100">
                 <div class="col-3">
-                  <img src="./images/nhuan.png" />
+                  <img src="./images/phan.png" />
                 </div>
                 <div class="col-4 decor d-grid">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Commercial</p>
                   <button class="bg-black white border h70 w230">WORK</button>
                   <button class="bg-black white border h70 w230">RESUME</button>
                 </div>
