--- a/about.html
+++ b/about.html
@@ -52,14 +52,18 @@
               What we do
             </p>
             <div class="owl-member owl-carousel middle">
-              <div class="d-flex space-around mt100 mb100">
+              <div class="d-flex space-around mt100 mb100 align-item">
                 <div class="col-3">
                   <img src="./images/nhuan.png" />
                 </div>
                 <div class="col-4 decor d-grid">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Designer</p>
-                  <button class="bg-black white border h70 w230">WORK</button>
-                  <button class="bg-black white border h70 w230">RESUME</button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    WORK
+                  </button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    RESUME
+                  </button>
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
@@ -67,7 +71,7 @@
                 </div>
               </div>
 
-              <div class="d-flex space-around mt100 mb100">
+              <div class="d-flex space-around mt100 mb100 align-item">
                 <div class="col-3">
                   <img src="./images/thanh.png" />
                 </div>
@@ -75,8 +79,12 @@
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">
                     Infomation Technology
                   </p>
-                  <button class="bg-black white border h70 w230">WORK</button>
-                  <button class="bg-black white border h70 w230">RESUME</button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    WORK
+                  </button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    RESUME
+                  </button>
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
@@ -84,7 +92,7 @@
                 </div>
               </div>
 
-              <div class="d-flex space-around mt100 mb100">
+              <div class="d-flex space-around mt100 mb100 align-item">
                 <div class="col-3">
                   <img src="./images/vu.png" />
                 </div>
@@ -92,8 +100,12 @@
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">
                     Infomation Technology
                   </p>
-                  <button class="bg-black white border h70 w230">WORK</button>
-                  <button class="bg-black white border h70 w230">RESUME</button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    WORK
+                  </button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    RESUME
+                  </button>
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
@@ -109,8 +121,12 @@
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">
                     Infomation Technology
                   </p>
-                  <button class="bg-black white border h70 w230">WORK</button>
-                  <button class="bg-black white border h70 w230">RESUME</button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    WORK
+                  </button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    RESUME
+                  </button>
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
@@ -126,8 +142,12 @@
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">
                     Infomation Technology
                   </p>
-                  <button class="bg-black white border h70 w230">WORK</button>
-                  <button class="bg-black white border h70 w230">RESUME</button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    WORK
+                  </button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    RESUME
+                  </button>
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
@@ -143,8 +163,12 @@
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">
                     Infomation Technology
                   </p>
-                  <button class="bg-black white border h70 w230">WORK</button>
-                  <button class="bg-black white border h70 w230">RESUME</button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    WORK
+                  </button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    RESUME
+                  </button>
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
@@ -158,8 +182,12 @@
                 </div>
                 <div class="col-4 decor d-grid">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Commercial</p>
-                  <button class="bg-black white border h70 w230">WORK</button>
-                  <button class="bg-black white border h70 w230">RESUME</button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    WORK
+                  </button>
+                  <button class="bg-black white border h70 w230 mt30">
+                    RESUME
+                  </button>
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
