--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
       <section class="technologies">
         <div class="container middle">
           <div class="d-grid">
-            <p class="cl-yellow sans fw700 fs48 lh62 middle mt100 bold">
+            <h1 class="cl-yellow sans fw700 fs48 lh62 middle mt100 bold">
               Technology Use
-            </p>
+            </h1>
             <p class="white sans fw700 fs36 lh47 mt100">
               The Technologies we use
             </p>
