--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
                 </div>
               </div>
 
-              <div class="d-flex space-around mt100 mb100">
+              <div class="d-flex space-around mt100 mb100 align-item">
                 <div class="col-3">
                   <img src="./images/thiet.png" />
                 </div>
@@ -134,7 +134,7 @@
                 </div>
               </div>
 
-              <div class="d-flex space-around mt100 mb100">
+              <div class="d-flex space-around mt100 mb100 align-item">
                 <div class="col-3">
                   <img src="./images/nam.png" />
                 </div>
@@ -155,7 +155,7 @@
                 </div>
               </div>
 
-              <div class="d-flex space-around mt100 mb100">
+              <div class="d-flex space-around mt100 mb100 align-item">
                 <div class="col-3">
                   <img src="./images/thang.png" />
                 </div>
@@ -176,7 +176,7 @@
                 </div>
               </div>
 
-              <div class="d-flex space-around mt100 mb100">
+              <div class="d-flex space-around mt100 mb100 align-item">
                 <div class="col-3">
                   <img src="./images/phan.png" />
                 </div>
