--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                   </button>
                 </div>
                 <div class="col-5 decor">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
               </div>
@@ -87,7 +87,7 @@
                   </button>
                 </div>
                 <div class="col-5 decor">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
               </div>
@@ -108,7 +108,7 @@
                   </button>
                 </div>
                 <div class="col-5 decor">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
               </div>
@@ -129,7 +129,7 @@
                   </button>
                 </div>
                 <div class="col-5 decor">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
               </div>
@@ -150,7 +150,7 @@
                   </button>
                 </div>
                 <div class="col-5 decor">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
               </div>
@@ -171,7 +171,7 @@
                   </button>
                 </div>
                 <div class="col-5 decor">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
               </div>
@@ -190,7 +190,7 @@
                   </button>
                 </div>
                 <div class="col-5 decor">
-                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Description</p>
+                  <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
               </div>
