--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
           Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!
         </h1>
         <p class="croll">Scroll Down</p>
-        <img class="slider" src="./images/Product image 1.png" alt="" />
-        <img class="slider" src="./images/Product image 2.png" alt="" />
-        <img class="slider" src="./images/Product image 3.png" alt="" />
+        <div class="slideshow-container">
+          <img class="mySlides active" src="./images/Product image 1.png" alt="">
+          <img class="mySlides" src="./images/Product image 2.png" alt="">
+          <img class="mySlides" src="./images/Product image 3.png" alt="">
+      </div>
       </header>
     </section>
 
