--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <img src="./images/logo-banner.png" alt="" class="logo-baner" />
         <h1 class="slogan">
-          Sức trẻ là sức trâu, sức mẻ là sức đánh lẻ, sức già là sức nghỉ hẳn!
+          Charging the Way to a Sustainable Future!
         </h1>
         <p class="croll">Scroll Down</p>
         <div class="slideshow-container">
