--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-      <section class="technologies">
+      <section class="technologies middle">
         <div class="container middle">
           <div class="d-grid">
             <h1 class="cl-yellow sans fw700 fs48 lh62 middle mt100 bold">
@@ -45,7 +45,7 @@
         </div>
       </section>
 
-      <section class="whatwedo">
+      <section class="whatwedo middle">
         <div class="container middle">
           <div class="d-grid">
             <p class="cl-yellow sans fw700 fs48 lh62 middle mt100 bold">
@@ -53,7 +53,7 @@
             </p>
             <div class="owl-member owl-carousel middle">
               <div class="d-flex space-around mt100 mb100 align-item">
-                <div class="col-3">
+                <div class="col-4">
                   <img src="./images/nhuan.png" />
                 </div>
                 <div class="col-4 decor d-grid">
@@ -65,14 +65,17 @@
                     RESUME
                   </button>
                 </div>
-                <div class="col-5 decor">
+                <div class="col-4 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
-                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                  <p class="white sans mt30">
+                    - Skill: Branding, UX/UI, Package,...<br /><br />
+                    - Role: Designer
+                  </p>
                 </div>
               </div>
 
               <div class="d-flex space-around mt100 mb100 align-item">
-                <div class="col-3">
+                <div class="col-4">
                   <img src="./images/thanh.png" />
                 </div>
                 <div class="col-4 decor d-grid">
@@ -86,14 +89,17 @@
                     RESUME
                   </button>
                 </div>
-                <div class="col-5 decor">
+                <div class="col-4 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
-                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                  <p class="white sans mt30">
+                    - Skill: HTML5, CSS3, JS ES6, ACSS, Java, C#...<br /><br />
+                    - Role: Front-End Developer
+                  </p>
                 </div>
               </div>
 
               <div class="d-flex space-around mt100 mb100 align-item">
-                <div class="col-3">
+                <div class="col-4">
                   <img src="./images/vu.png" />
                 </div>
                 <div class="col-4 decor d-grid">
@@ -107,14 +113,17 @@
                     RESUME
                   </button>
                 </div>
-                <div class="col-5 decor">
+                <div class="col-4 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
-                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                  <p class="white sans mt30">
+                    - Skill: HTML5, CSS3, JS ES6, ACSS, Java, C#...<br /><br />
+                    - Role: Front-End Developer
+                  </p>
                 </div>
               </div>
 
               <div class="d-flex space-around mt100 mb100 align-item">
-                <div class="col-3">
+                <div class="col-4">
                   <img src="./images/thiet.png" />
                 </div>
                 <div class="col-4 decor d-grid">
@@ -130,12 +139,15 @@
                 </div>
                 <div class="col-5 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
-                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                  <p class="white sans mt30">
+                    - Skill: HTML5, CSS3, JS ES6, ACSS, Java, C#...<br /><br />
+                    - Role: Front-End Developer
+                  </p>
                 </div>
               </div>
 
               <div class="d-flex space-around mt100 mb100 align-item">
-                <div class="col-3">
+                <div class="col-4">
                   <img src="./images/nam.png" />
                 </div>
                 <div class="col-4 decor d-grid">
@@ -149,14 +161,17 @@
                     RESUME
                   </button>
                 </div>
-                <div class="col-5 decor">
+                <div class="col-4 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
-                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                  <p class="white sans mt30">
+                    - Skill: HTML5, CSS3, JS ES6, ACSS, Java, C#...<br /><br />
+                    - Role: Front-End Developer
+                  </p>
                 </div>
               </div>
 
               <div class="d-flex space-around mt100 mb100 align-item">
-                <div class="col-3">
+                <div class="col-4">
                   <img src="./images/thang.png" />
                 </div>
                 <div class="col-4 decor d-grid">
@@ -170,14 +185,17 @@
                     RESUME
                   </button>
                 </div>
-                <div class="col-5 decor">
+                <div class="col-4 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
-                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                  <p class="white sans mt30">
+                    - Skill: HTML5, CSS3, JS ES6, ACSS, Java, C#...<br /><br />
+                    - Role: Front-End Developer
+                  </p>
                 </div>
               </div>
 
               <div class="d-flex space-around mt100 mb100 align-item">
-                <div class="col-3">
+                <div class="col-4">
                   <img src="./images/phan.png" />
                 </div>
                 <div class="col-4 decor d-grid">
@@ -189,7 +207,7 @@
                     RESUME
                   </button>
                 </div>
-                <div class="col-5 decor">
+                <div class="col-4 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
                   <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
                 </div>
