--- a/about.html
+++ b/about.html
@@ -14,6 +14,36 @@
   </head>
   <body>
     <main>
+      <section class="home-contact-us middle container">
+        <div class="home-contact-content">
+          <h1>
+            Hi, <br />
+            we are <span class="span-yellow"> TEAM 5</span>
+          </h1>
+          <p>Your choice right here!</p>
+          <div class="button">
+            <a href="#">More Product</a>
+            <a href="#">Learn Product</a>
+          </div>
+        </div>
+        <!-- <div class="cirle"> 
+            <div class="cirle-img">
+                <img src="./img/bg-2.jpg" alt="">
+            </div>
+        </div> -->
+      </section>
+      <section class="total-project container middle d-flex">
+        <div class="total-project-content"></div>
+        <div class="total-project-content-2 col-6 flex-end">
+          <h1>Total Project</h1>
+          <p>
+            “Electric” is a company specializing in providing electronic devices
+            to users and bringing the highest and most optimal use value to
+            users.
+          </p>
+        </div>
+      </section>
+
       <section class="technologies middle">
         <div class="container middle">
           <div class="d-grid">
