--- a/about.html
+++ b/about.html
@@ -15,6 +15,16 @@
   <body>
     <main>
       <section class="home-contact-us middle container">
+        <div class="menu-background">
+          <div class="square-top"></div>
+          <img class="logo" src="./images/logo.png" alt="" />
+          <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="product.html">Product</a></li>
+            <li><a href="contact.html">Contact us</a></li>
+          </ul>
+        </div>
         <div class="home-contact-content">
           <h1>
             Hi, <br />
