--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
       </section>
 
       <section class="technologies middle">
-        <div class="container middle">
+        <div class="container middle col-10">
           <div class="d-grid">
             <h1 class="cl-yellow sans fw700 fs48 lh62 middle mt100 bold">
               Technology Use
@@ -249,7 +249,10 @@
                 </div>
                 <div class="col-4 decor">
                   <p class="white fw700 fs32 lh42 mt5 ml20 b1">Skill & Role</p>
-                  <p class="white sans mt30">alskdhjasjikdhiasjdhasjdh</p>
+                  <p class="white sans mt30">
+                    - Skill: Commercial<br /><br />
+                    - Role: Marketing, Content Creator
+                  </p>
                 </div>
               </div>
             </div>
