--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <section class="screen middle">
       <header class="pr middle">
-        <div class="menu-background">
+        <div class="menu-background middle">
           <div class="square-top"></div>
           <img class="logo" src="./images/logo.png" alt="" />
           <ul class="navbar">
@@ -27,15 +27,17 @@
           </ul>
         </div>
         <img src="./images/logo-banner.png" alt="" class="logo-baner" />
-        <h1 class="slogan">
-          Charging the Way to a Sustainable Future!
-        </h1>
+        <h1 class="slogan">Charging the Way to a Sustainable Future!</h1>
         <p class="croll">Scroll Down</p>
-        <div class="slideshow-container">
-          <img class="mySlides active" src="./images/Product image 1.png" alt="">
-          <img class="mySlides" src="./images/Product image 2.png" alt="">
-          <img class="mySlides" src="./images/Product image 3.png" alt="">
-      </div>
+        <div class="slideshow-container middle">
+          <img
+            class="mySlides active"
+            src="./images/Product image 1.png"
+            alt=""
+          />
+          <img class="mySlides" src="./images/Product image 2.png" alt="" />
+          <img class="mySlides" src="./images/Product image 3.png" alt="" />
+        </div>
       </header>
     </section>
 
