--- a/about.html
+++ b/about.html
@@ -46,10 +46,27 @@
         <div class="total-project-content"></div>
         <div class="total-project-content-2 col-6 flex-end">
           <h1>Total Project</h1>
-          <p>
+          <p class="sans justify">
             “Electric” is a company specializing in providing electronic devices
             to users and bringing the highest and most optimal use value to
-            users.
+            users. <br /><br /><br />Electronic devices are devices, items with
+            basic structure including semiconductor components and electronic
+            circuits. These electronic devices will most likely not have
+            mechanical operations. Electronic equipment works on automation. And
+            apply modern technologies to operate. Electronic devices make
+            people's lives much more convenient and easier. Electronic devices
+            appear everywhere in life. Electronic devices are indispensable
+            items in today's modern society.<br /><br /><br />
+            Due to consumer demand for electronic devices is increasing and
+            constantly innovating. Therefore, we established the company to
+            serve the needs of customers in increasing productivity and
+            efficiency, helping to speed up the production process.
+            <br /><br /><br />The company was established on June 20, 2023,
+            specializing in electronic devices such as graphics cards, cpu,
+            computer cases, monitors, components, ... In addition, the
+            establishment of a company also means to help improve people's
+            quality of life because thanks to electronic devices, society is
+            more and more developed and modern.
           </p>
         </div>
       </section>
