--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
         <p class="croll">Scroll Down</p>
         <div class="slideshow-container middle">
           <img
-            class="mySlides active"
+            class="mySlides active middle"
             src="./images/Product image 1.png"
             alt=""
           />
-          <img class="mySlides" src="./images/Product image 2.png" alt="" />
-          <img class="mySlides" src="./images/Product image 3.png" alt="" />
+          <img
+            class="mySlides middle"
+            src="./images/Product image 2.png"
+            alt=""
+          />
+          <img class="mySlides middle src="./images/Product image 3.png" alt=""
+          />
         </div>
       </header>
     </section>
