--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="menu-background">
           <div class="square-top"></div>
           <img class="logo" src="./images/logo.png" alt="" />
-          <ul class="navbar">
+          <ul class="navbar middle">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="product.html">Product</a></li>
