Xong page about us - Vũ

--- a/about.html
+++ b/about.html
@@ -71,6 +71,156 @@
         </div>
       </section>
 
+      <section>
+        <div class="aboutus d-flex container">
+          <div class="d-grid col-6">
+            <h1 class="cl-yellow sans fw700 fs48 lh62 pl120 mt30">About us</h1>
+            <p class="white sans fw700 fs18 lh23 mt100 pl120 col-6">
+              We are <h class="cl-yellow">"ELECTRIC"</h> creators of content and
+              make electrical devices that make our electrical devices
+              accessible to everything around the world.
+            </p>
+            <img
+              class="img2 pl120 mt30 mb100"
+              src="./images/about-us.jpg"
+              alt="about-us"
+            />
+          </div>
+          <div class="d-grid col-6">
+            <h2 class="white fw700 fs48 lh62 middle mt100">Team members</h2>
+            <div class="d-flex space-evenly">
+              <div>
+                <img
+                  class="img"
+                  src="./images/Vo_Duy_Thanh.jpg"
+                  alt="member-1"
+                />
+                <h1 class="white san fs10 lh12 text-middle mt5">
+                  Vo Duy Thanh
+                </h1>
+                <p class="white san fs10 lh12 text-middle mt5">Leader</p>
+              </div>
+              <div>
+                <img
+                  class="img"
+                  src="./images/Nguyen_Dinh_Nhuan.jpg"
+                  alt="member-2"
+                />
+                <h1 class="white san fs10 lh12 text-middle mt5">
+                  Nguyen Dinh Nhuan
+                </h1>
+                <p class="white san fs10 lh12 text-middle mt5">Member</p>
+              </div>
+              <div>
+                <img
+                  class="img"
+                  src="./images/Do_Huynh_Anh_Vu.jpg"
+                  alt="member-3"
+                />
+                <h1 class="white san fs10 lh12 text-middle mt5">
+                  Do Huynh Anh Vu
+                </h1>
+                <p class="white san fs10 lh12 text-middle mt5">Member</p>
+              </div>
+              <div>
+                <img
+                  class="img"
+                  src="./images/Truong_Trong_Thiet.jpg"
+                  alt="member-4"
+                />
+                <h1 class="white san fs10 lh12 text-middle mt5">
+                  Truong Trong Thiet
+                </h1>
+                <p class="white san fs10 lh12 text-middle mt5">Member</p>
+              </div>
+            </div>
+
+            <div class="d-flex space-evenly mt30">
+              <div>
+                <img
+                  class="img"
+                  src="./images/Truong_Hoai_Nam.jpg"
+                  alt="member-5"
+                />
+                <h1 class="white san fs10 lh12 text-middle mt5">
+                  Truong Hoai Nam
+                </h1>
+                <p class="white san fs10 lh12 text-middle mt5">Member</p>
+              </div>
+              <div>
+                <img
+                  class="img"
+                  src="./images/Nguyen_Toan_Thang.jpg"
+                  alt="member-6"
+                />
+                <h1 class="white san fs10 lh12 text-middle mt5">
+                  Nguyen Toan Thang
+                </h1>
+                <p class="white san fs10 lh12 text-middle mt5">Member</p>
+              </div>
+              <div>
+                <img
+                  class="img"
+                  src="./images/Tran_Thi_Hong_Phan.jpg"
+                  alt="member-7"
+                />
+                <h1 class="white san fs10 lh12 text-middle mt5">
+                  Tran Thi Hong Phan
+                </h1>
+                <p class="white san fs10 lh12 text-middle mt5">Member</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="advantage d-grid">
+          <h1 class="text-middle white sans fw700 fs48 lh62 mt100">Advantage</h1>
+          <div class="d-flex mt100 space-evenly">
+          <div class="overlay-container">
+            <img class="img1" src="./images/mission.jpg" alt="mission" />
+            <div class="overlay"></div>
+            <div class="text">Mission</div>
+          </div>
+          <div class="overlay-container">
+            <img class="img1" src="./images/vision.jpg" alt="vision" />
+            <div class="overlay"></div>
+            <div class="text">Vision</div>
+          </div>
+          <div class="overlay-container">
+            <img class="img1" src="./images/target.jpg" alt="target" />
+            <div class="overlay"></div>
+            <div class="text">Target</div>
+          </div>
+        </div>
+          <h2 class="text-middle white sans fw700 fs48 lh62 mt100">SWOT</h2>
+          <div class="d-flex mt30 space-evenly mb200">
+          <div class="overlay-container">
+            <img class="img2 bg" src="./images/strength.jpg" alt="strength" />
+            <div class="overlay"></div>
+            <div class="text">Strength</div>
+
+          </div>
+          <div class="overlay-container">
+            <img class="img2 bg" src="./images/weakness.jpg" alt="weakness" />
+            <div class="overlay"></div>
+            <div class="text">Weakness</div>
+
+          </div>
+          <div class="overlay-container">
+            <img class="img2 bg" src="./images/Opportunity.jpg" alt="Opportunity" />
+            <div class="overlay"></div>
+            <div class="text">Opportunity</div>
+
+          </div>
+          <div class="overlay-container">
+            <img class="img2 bg" src="./images/threat.jpg" alt="threat" />
+            <div class="overlay"></div>
+            <div class="text">Threat</div>
+
+          </div>
+        </div>
+      </section>
+
       <section class="technologies middle">
         <div class="container middle col-10">
           <div class="d-grid">
