--- a/product.html
+++ b/product.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="./css/owl.carousel.min.css"/>
-    <link rel="stylesheet" href="./css/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM Sans:wght@400;500;700&display=swap" />
 </head>
 
@@ -21,22 +21,17 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About us</a></li>
                     <li><a href="product.html">Product</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
                 </ul>
             </div>
-            <div class="box"></div>
-            <div class="search-bar-container">
-                <span>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="24"
-                        height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                        <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
-                        <path d="M21 21l-6 -6"></path>
-                    </svg>
-                </span>
-                <input class="search-bar" type="text" />
+            <div class="box">
+                <div class="retangle-box">
+                    <div class="vector-box">
+                        <input class="search-box" type="text" />
+                    </div>
+                    <img class="img-box" src="./images/icon _Search.png" alt="">
+                </div>
             </div>
+
             <div class="slideshow-container-product">
                 <img class="mySlides active" src="./images/Product image 1.png" alt="" />
                 <img class="mySlides" src="./images/Product image 2.png" alt="" />
