--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
           <img class="logo" src="./images/logo.png" alt="" />
           <ul class="navbar middle">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About us</a></li>
+            <li><a href="about.html" class="active">About us</a></li>
             <li><a href="product.html">Product</a></li>
           </ul>
         </div>
