--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div class="square-top"></div>
         <img class="logo" src="./images/logo.png" alt="" />
         <ul class="navbar middle">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <span></span>
           <li><a href="about.html">About us</a></li>
           <li><a href="product.html">Product</a></li>
         </ul>
