--- a/product.html
+++ b/product.html
@@ -20,7 +20,7 @@
                 <ul class="navbar middle">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About us</a></li>
-                    <li><a href="product.html">Product</a></li>
+                    <li><a href="product.html" class="active">Product</a></li>
                 </ul>
             </div>
             <div class="box">
@@ -31,7 +31,6 @@
                     <img class="img-box" src="./images/icon _Search.png" alt="">
                 </div>
             </div>
-
             <div class="slideshow-container-product">
                 <img class="mySlides active" src="./images/Product image 1.png" alt="" />
                 <img class="mySlides" src="./images/Product image 2.png" alt="" />
@@ -42,7 +41,6 @@
                 <div class="retangle"></div>
             </div>
         </header>
-
     </section>
 
     <script src="./js/jquery-3.6.3.min.js"></script>
