commit responsive home

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="pr middle">
       <div class="menu-background middle">
         <div class="square-top"></div>
-        <img class="logo" src="./images/logo.png" alt="" />
+        <img class="logo " src="./images/logo.png" alt="" />
         <ul class="navbar middle">
           <li><a href="index.html" class="active">Home</a></li>
           <span></span>
@@ -24,9 +24,9 @@
           <li><a href="product.html">Product</a></li>
         </ul>
       </div>
-      <img src="./images/logo-banner.png" alt="" class="logo-baner" />
+      <img src="./images/logo-banner.png" alt="" class="logo-baner middle" />
       <h1 class="slogan middle">Charging the Way to a Sustainable Future!</h1>
-      <p class="croll">Scroll Down</p>
+      <p class="croll middle">Scroll Down</p>
       <div class="slideshow-container middle">
         <img class="mySlides active middle" src="./images/Product image 1.png" alt="" />
         <img class="mySlides middle" src="./images/Product image 2.png" alt="" />
