--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
 
 <body>
     <section class="screen middle">
-        <header class="pr-product middle">
+        <header class="pr middle">
             <div class="menu-background middle">
                 <div class="square-top"></div>
                 <img class="logo" src="./images/logo.png" alt="" />
